# PiBot

./: .gitignore  .travis.yml  README.md
documentation/: documentation.md
firmware/MotorController/: .clang_complete  README.md  adc_stuff.c  clock_config.c  clock_config.h  constants.h  encoders.c  encoders.h  hardware.c  hardware.h  i2c_commands.h  i2c_comms.c  i2c_comms.h  main.c  main.h  motor_calc.c  motor_calc.h  motor_controller.c  motor_controller.h  motor_driver.c  motor_drivers.c  motor_drivers.h  pid_parameters.h  timer.c  timer.h
firmware/MotorController/MKL03Z/: clock_config.c  clock_config.h  hardware.c  makefile  motor_driver.c
firmware/MotorController/MKL03Z/MKL03Z4_drivers/boards/frdmkl03z/demo_apps/hello_world/armgcc/: CMakeLists.txt  Makefile  build_all.sh  build_release.sh
firmware/MotorController/MKL03Z/armgcc/: CMakeLists.txt  Makefile  armgcc.cmake  build.py  build_all.sh  build_debug.sh  build_release.sh  clean.sh  cmake_install.cmake
firmware/MotorController/MKL03Z4_drivers/: MKL03Z8xxx4_manifest.xml
firmware/MotorController/MKL03Z4_drivers/boards/frdmkl03z/demo_apps/hello_world/armgcc/: CMakeLists.txt  build_all.sh  build_debug.sh  cmake_install.cmake
firmware/MotorController/MKL03Z4_drivers/devices/MKL03Z4/: MKL03Z4.h
firmware/MotorController/MKL03Z4_drivers/devices/MKL03Z4/gcc/: startup_MKL03Z4.S
firmware/MotorController/MKL03Z4_drivers/tools/cmake_toolchain_files/: armgcc.cmake
firmware/MotorController/armgcc/: CMakeLists.txt  armgcc.cmake  armgcc_force_cpp.cmake  build.py  clang.cmake  cmake_install.cmake  gcc.cmake
firmware/UnitTests/: dummy_test.c  run_tests.py  test_motor_calc.c
hardware/: PiBot.lib  README.md  hardware.md  mk20dx64vlh7.bak
hardware/KiCAD/: PiBot-cache.lib  PiBot.bak  PiBot.kicad_pcb  PiBot.net  PiBot.pro  PiBot.sch  fp-lib-table  motors.sch  power.sch  sensors.sch
hardware/KiCAD_lib.pretty/: LQFP-64_10x10mm_Pitch0.5mm.kicad_mod  MK20DX64VLH7.kicad_mod  PQFN-32-EP-0.8mm.kicad_mod
hardware/PiBot.pretty/: 14-LGA-3x5.kicad_mod  16-LGA-3x3.kicad_mod  AA_Batt.kicad_mod  DFN-10-w_pad.kicad_mod  JS202011SCQN.kicad_mod  Jumper-NC.kicad_mod  Jumper-NO.kicad_mod  PLCC2-LED-Reverse.kicad_mod  PQFN-32-EP-0.8mm.kicad_mod  Sanyo_GearMotor.kicad_mod  TS0101F020V3.kicad_mod  WSON008X2120.kicad_mod  feather-headers.kicad_mod
software/: README.md
